@@ -16,6 +16,8 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -51,11 +53,12 @@ class TariffCalculationServiceTest {
     private Country desCountry;
     private Tariff testTariff;
     private TariffCalculationRequest validRequest;
+    private LocalDate dateToUse;
 
     @BeforeEach
     void setUp() {
         testProduct = new Product();
-        testProduct.setProductCode(1001);
+        testProduct.setProductCode("1001");
 
         exportCountry = new Country();
         exportCountry.setCountryCode("US");
@@ -69,14 +72,15 @@ class TariffCalculationServiceTest {
         testTariff.setTariffRate(5.0);
 
         validRequest = TariffCalculationRequest.builder()
-                .productCode(1001)
+                .productCode("1001")
                 .exportCountryCode("US")
                 .desCountryCode("CN")
                 .customsValue(1000.0)
+                .date(LocalDate.of(2025, 11, 11))
                 .build();
     }
 
-    @Test
+  @Test
     @DisplayName("Should calculate tariff with trade agreements")
     void calculateTariff_WithNoTradeAgreements_ShouldCalculateTariff() throws Exception {
         // Arrange
@@ -89,15 +93,15 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
-                .thenReturn(List.of());
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
+                .thenReturn(Collections.emptyList());
 
         // Act
         TariffCalculationResponse response = tariffCalculationService.calculateTariff(validRequest);
 
         // Assert
         assertThat(response).isNotNull();
-        assertThat(response.getProductCode()).isEqualTo(1001);
+        assertThat(response.getProductCode()).isEqualTo("1001");
         assertThat(response.getExportCountryCode()).isEqualTo("US");
         assertThat(response.getDesCountryCode()).isEqualTo("CN");
         assertThat(response.getCustomsValue()).isEqualTo(1000.0);
@@ -108,15 +112,15 @@ class TariffCalculationServiceTest {
         verify(productRepository).findByProductCode(validRequest.getProductCode());
         verify(countryRepository, times(2)).findByCountryCode(anyString());
         verify(tariffRepository).findByProductAndCountry(testProduct, desCountry);
-        verify(agreementCountryRepository).findAgreementsBetweenCountries(
-                exportCountry.getCountryName(), desCountry.getCountryName());
+        verify(agreementCountryRepository).findAgreementsBetweenCountriesOnDate(
+                exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate());
     }
 
     @Test
     @DisplayName("Should calculate tariff with FTA agreement")
     void calculateTariff_WithFTAAgreement_ShouldCalculatePreferentialTariff() throws Exception {
         // Arrange
-        testProduct.setProductCode(1001);       // HIGH sensitivity
+        testProduct.setProductCode("1001");       // HIGH sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -131,7 +135,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -149,7 +153,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should calculate tariff with multiple agreement types")
     void calculateTariff_WithMultipleAgreementTypes_ShouldUseBestRate() throws Exception {
         // Arrange
-        testProduct.setProductCode(2001);       // MEDIUM sensitivity
+        testProduct.setProductCode("2001");       // MEDIUM sensitivity
 
         TradeAgreement multiAgreement = new TradeAgreement();
         multiAgreement.setAgreementId(1L);
@@ -164,7 +168,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(multiAgreement));
@@ -182,7 +186,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should calculate tariff with EIA agreement for low sensitivity product")
     void calculateTariff_WithEIAAgreementLowSensitivity_ShouldCalculatePreferentialTariff() throws Exception {
         // Arrange
-        testProduct.setProductCode(5001);       // LOW sensitivity
+        testProduct.setProductCode("5001");       // LOW sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -197,7 +201,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -214,14 +218,15 @@ class TariffCalculationServiceTest {
     @DisplayName("Should throw exception for invalid product code")
     void calculateTariff_InvalidProductCode_ShouldThrowException() {
         // Arrange
-        when(productRepository.findByProductCode(9999))
+        when(productRepository.findByProductCode("9999"))
                 .thenReturn(Optional.empty());
 
         TariffCalculationRequest request = TariffCalculationRequest.builder()
-                .productCode(9999)
+                .productCode("9999")
                 .exportCountryCode("US")
                 .desCountryCode("CN")
                 .customsValue(1000.0)
+                .date(LocalDate.of(2025, 11, 11))
                 .build();
 
         // Act & Assert
@@ -230,7 +235,7 @@ class TariffCalculationServiceTest {
                 .hasMessageContaining("Invalid product code");
 
         // Verify
-        verify(productRepository).findByProductCode(9999);
+        verify(productRepository).findByProductCode("9999");
         verifyNoInteractions(countryRepository, tariffRepository, agreementCountryRepository, tradeAgreementRepository);
     }
 
@@ -238,16 +243,17 @@ class TariffCalculationServiceTest {
     @DisplayName("Should throw exception when export country not found")
     void calculateTariff_ExportCountryNotFound_ShouldThrowException() {
         // Arrange
-        when(productRepository.findByProductCode(1001))
+        when(productRepository.findByProductCode("1001"))
                 .thenReturn(Optional.of(testProduct));
         when(countryRepository.findByCountryCode("XX"))
                 .thenReturn(Optional.empty());
 
         TariffCalculationRequest request = TariffCalculationRequest.builder()
-                .productCode(1001)
+                .productCode("1001")
                 .exportCountryCode("XX")
                 .desCountryCode("CN")
                 .customsValue(1000.0)
+                .date(LocalDate.of(2025, 11, 11))
                 .build();
 
         // Act & Assert
@@ -256,7 +262,7 @@ class TariffCalculationServiceTest {
                 .hasMessageContaining("Invalid export country code");
 
         // Verify
-        verify(productRepository).findByProductCode(1001);
+        verify(productRepository).findByProductCode("1001");
         verify(countryRepository).findByCountryCode("XX");
         verifyNoInteractions(tariffRepository, agreementCountryRepository, tradeAgreementRepository);
     }
@@ -265,7 +271,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should throw exception when destination country not found")
     void calculateTariff_DesCountryNotFound_ShouldThrowException() {
         // Arrange
-        when(productRepository.findByProductCode(1001))
+        when(productRepository.findByProductCode("1001"))
                 .thenReturn(Optional.of(testProduct));
         when(countryRepository.findByCountryCode("US"))
                 .thenReturn(Optional.of(exportCountry));
@@ -273,7 +279,7 @@ class TariffCalculationServiceTest {
                 .thenReturn(Optional.empty());
 
         TariffCalculationRequest request = TariffCalculationRequest.builder()
-                .productCode(1001)
+                .productCode("1001")
                 .exportCountryCode("US")
                 .desCountryCode("YY")
                 .customsValue(1000.0)
@@ -282,10 +288,10 @@ class TariffCalculationServiceTest {
         // Act & Assert
         assertThatThrownBy(() -> tariffCalculationService.calculateTariff(request))
                 .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("Invalid export country code");
+                .hasMessageContaining("Invalid destination country code");
 
         // Verify
-        verify(productRepository).findByProductCode(1001);
+        verify(productRepository).findByProductCode("1001");
         verify(countryRepository).findByCountryCode("US");
         verify(countryRepository).findByCountryCode("YY");
         verifyNoInteractions(tariffRepository, agreementCountryRepository, tradeAgreementRepository);
@@ -295,7 +301,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should throw exception when tariff not found")
     void calculateTariff_TariffNotFound_ShouldThrowException() {
         // Arrange
-        when(productRepository.findByProductCode(1001))
+        when(productRepository.findByProductCode("1001"))
                 .thenReturn(Optional.of(testProduct));
         when(countryRepository.findByCountryCode("US"))
                 .thenReturn(Optional.of(exportCountry));
@@ -365,7 +371,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.empty());
@@ -395,7 +401,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -412,7 +418,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should calculate tariff with PSA agreement for high sensitivity product")
     void calculateTariff_WithPSAAgreementHighSensitivity_ShouldCalculatePreferentialTariff() {
         // Arrange
-        testProduct.setProductCode(1001);       // HIGH sensitivity
+        testProduct.setProductCode("1001");       // HIGH sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -427,7 +433,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -444,7 +450,7 @@ class TariffCalculationServiceTest {
     @DisplayName("should calculate tariff with CU agreement for high sensitivity product")
     void calculateTariff_WithCUAgreementHighSensitivity_ShouldCalculatePreferentialTariff() {
         // Arrange
-        testProduct.setProductCode(1001);       // HIGH sensitivity
+        testProduct.setProductCode("1001");       // HIGH sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -459,7 +465,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -476,7 +482,7 @@ class TariffCalculationServiceTest {
     @DisplayName("should calculate tariff with EIA agreement for medium sensitivity product")
     void calculateTariff_WithEIAAgreementMediumSensitivity_ShouldCalculatePreferentialTariff() {
         // Arrange
-        testProduct.setProductCode(2001);       // MEDIUM sensitivity
+        testProduct.setProductCode("2001");       // MEDIUM sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -491,7 +497,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -508,7 +514,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should calculate tariff with other agreement for medium sensitivity product")
     void calculateTariff_WithOtherAgreementMediumSensitivity_ShouldCalculateMFNTariff() {
         // Arrange
-        testProduct.setProductCode(2001);       // MEDIUM sensitivity
+        testProduct.setProductCode("2001");       // MEDIUM sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -523,7 +529,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -541,7 +547,7 @@ class TariffCalculationServiceTest {
     void getDiscountMultiplier_DefaultSensitivityTier_ShouldReturnNoDiscount() {
         // This tests the default case in getDiscountMultiplier method
         // Arrange
-        testProduct.setProductCode(9999);       // Will default to MEDIUM sensitivity
+        testProduct.setProductCode("9999");       // Will default to MEDIUM sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -556,7 +562,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
@@ -573,7 +579,7 @@ class TariffCalculationServiceTest {
     @DisplayName("Should handle tariff with FTA with LOW sensitivity product")
     void calculateTariff_WithFTAAgreementLowSensitivity_ShouldCalculatePreferentialTariff() {
         // Arrange
-        testProduct.setProductCode(5001);       // LOW sensitivity
+        testProduct.setProductCode("5001");       // LOW sensitivity
 
         TradeAgreement tradeAgreement = new TradeAgreement();
         tradeAgreement.setAgreementId(1L);
@@ -588,7 +594,7 @@ class TariffCalculationServiceTest {
         when(tariffRepository.findByProductAndCountry(testProduct, desCountry))
                 .thenReturn(Optional.of(testTariff));
         when(agreementCountryRepository
-                .findAgreementsBetweenCountries(exportCountry.getCountryName(), desCountry.getCountryName()))
+                .findAgreementsBetweenCountriesOnDate(exportCountry.getCountryName(), desCountry.getCountryName(), validRequest.getDate()))
                 .thenReturn(List.of(1L));
         when(tradeAgreementRepository.findByAgreementId(1L))
                 .thenReturn(Optional.of(tradeAgreement));
